<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <!-- Project from https://start.vaadin.com/project/cba34321-727e-4b10-8be5-54846ebcd30c -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.2</version>
    </parent>
    <groupId>com.capstone</groupId>
    <artifactId>cqap</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>3rdpary-dependencies</module>
        <module>cqap-datamodel</module>
        <module>cqap-dicom</module>
        <module>cqap-common</module>
        <module>cqap-client</module>
        <module>cqap-dicom-scraper</module>
        <module>cqap-merge</module>
        <module>hl7-parser</module>
        <module>cqap-server</module>
        <module>cqap-web</module>
    </modules>
    <properties>
        <spring.version>3.1.2</spring.version>
        <cglib.version>3.3.0</cglib.version>
        <java.version>19</java.version>
        <vaadin.version>24.2.2</vaadin.version>
        <st-generator.version>1.0.0</st-generator.version>
        <lambdaj.version>2.3.3</lambdaj.version>
        <hapi.version>2.1</hapi.version>
    </properties>

    <repositories>
        <repository>
            <id>Vaadin Directory</id>
            <url>https://maven.vaadin.com/vaadin-addons</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>dcm4che</id>
            <url>https://www.dcm4che.org/maven2/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>cqap-datamodel</artifactId>
                <version>${project.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>cqap-dicom</artifactId>
                <version>${project.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>cqap-common</artifactId>
                <version>${project.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>cqap-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>hl7-parser</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.jackson</groupId>
                <artifactId>jackson-mapper-asl</artifactId>
                <version>1.9.13</version>
            </dependency>
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-bom</artifactId>
                <version>${vaadin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.vaadin</groupId>
                <!-- Replace artifactId with vaadin-core to use only free components -->
                <artifactId>vaadin</artifactId>
                <version>${vaadin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-spring-boot-starter</artifactId>
                <version>${vaadin.version}</version>
            </dependency>
            <dependency>
                <groupId>org.parttio</groupId>
                <artifactId>line-awesome</artifactId>
                <version>1.1.0</version>
            </dependency>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>24.1.0</version>
            </dependency>
            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>2.12.5</version>
            </dependency>
            <dependency>
                <groupId>com.googlecode.lambdaj</groupId>
                <artifactId>lambdaj</artifactId>
                <version>${lambdaj.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.15.0</version>
            </dependency>
            <dependency>
                <groupId>cglib</groupId>
                <artifactId>cglib</artifactId>
                <version>${cglib.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.mail</groupId>
                <artifactId>mail</artifactId>
                <version>1.4.7</version>
            </dependency>
            <dependency>
                <groupId>javax.activation</groupId>
                <artifactId>activation</artifactId>
                <version>1.1-rev-1</version>
            </dependency>
            <dependency>
                <groupId>dcm4che</groupId>
                <artifactId>dcm4che-core</artifactId>
                <version>2.0.29</version>
            </dependency>
            <dependency>
                <groupId>dcm4che.tool</groupId>
                <artifactId>dcm4che-tool-dcmqr</artifactId>
                <version>2.0.29</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-reload4j</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>dcm4che</groupId>
                <artifactId>dcm4che-imageio</artifactId>
                <version>2.0.29</version>
            </dependency>
            <dependency>
                <groupId>dcm4che</groupId>
                <artifactId>dcm4che-imageio-rle</artifactId>
                <version>2.0.29</version>
            </dependency>
            <dependency>
                <groupId>gov.nih.imagej</groupId>
                <artifactId>imagej</artifactId>
                <version>1.46</version>
            </dependency>
            <dependency>
                <groupId>ca.uhn.hapi</groupId>
                <artifactId>hapi-base</artifactId>
                <version>${hapi.version}</version>
            </dependency>
            <dependency>
                <groupId>ca.uhn.hapi</groupId>
                <artifactId>hapi-structures-v21</artifactId>
                <version>${hapi.version}</version>
            </dependency>
            <dependency>
                <groupId>ca.uhn.hapi</groupId>
                <artifactId>hapi-structures-v22</artifactId>
                <version>${hapi.version}</version>
            </dependency>
            <dependency>
                <groupId>ca.uhn.hapi</groupId>
                <artifactId>hapi-structures-v23</artifactId>
                <version>${hapi.version}</version>
            </dependency>
            <dependency>
                <groupId>ca.uhn.hapi</groupId>
                <artifactId>hapi-structures-v231</artifactId>
                <version>${hapi.version}</version>
            </dependency>
            <dependency>
                <groupId>ca.uhn.hapi</groupId>
                <artifactId>hapi-structures-v24</artifactId>
                <version>${hapi.version}</version>
            </dependency>
            <dependency>
                <groupId>ca.uhn.hapi</groupId>
                <artifactId>hapi-structures-v25</artifactId>
                <version>${hapi.version}</version>
            </dependency>
            <dependency>
                <groupId>ca.uhn.hapi</groupId>
                <artifactId>hapi-structures-v251</artifactId>
                <version>${hapi.version}</version>
            </dependency>
            <dependency>
                <groupId>ca.uhn.hapi</groupId>
                <artifactId>hapi-structures-v26</artifactId>
                <version>${hapi.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>32.1.3-jre</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.mojo.appassembler</groupId>
                <artifactId>appassembler-booter</artifactId>
                <version>2.1.0</version>
            </dependency>
            <dependency>
                <groupId>javax.inject</groupId>
                <artifactId>javax.inject</artifactId>
                <version>1</version>
            </dependency>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>4.0.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>2.3.1</version>
            </dependency>
            <dependency>
                <groupId>org.easytesting</groupId>
                <artifactId>fest-assert</artifactId>
                <version>1.4</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-testbench-junit5</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <image>
                            <builder>paketobuildpacks/builder-jammy-base:latest</builder>
                        </image>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>3.4.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>UTF-8</encoding>
                        <fork>true</fork>
                        <compilerArgs>
                            <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
                            <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
                            <arg>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>appassembler-maven-plugin</artifactId>
                    <version>2.1.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
